# G711_G721_G723_codec

./: CMakeLists.txt  decode.c  encode.c  g72x.c  g72x.h
